Revert "Fix monitor name cropping in nested groups (#5981) (#6080)"
This reverts commit 7587269b62347fcf13b9fcd951146b6f2bef89b3.

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -482,7 +482,6 @@ optgroup {
         .info {
             white-space: nowrap;
             overflow: hidden;
-            text-overflow: ellipsis;
         }
 
         &:hover {
